<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_back"
        android:icon="@drawable/ic_arrow_back_white_48dp"
        app:showAsAction="ifRoom"
        android:title="@string/back"/>
    <item android:id="@+id/action_cart"
        android:icon="@drawable/ic_shopping_cart_white_48dp"
        app:showAsAction="ifRoom"
        android:title="@string/carrinho"/>
    <item
        android:id="@+id/action_order_asc"
        android:checked="true"
        android:title="@string/por_a_z"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_order_desc"
        android:checked="false"
        android:title="@string/por_z_a"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_value_min"
        android:checked="false"
        android:title="@string/por_valor_min"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_value_max"
        android:checked="false"
        android:title="@string/por_valor_max"
        app:showAsAction="never" />
</menu>