<?xml version="1.0" encoding="utf-8"?>
<!--RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?android:attr/selectableItemBackground"
    android:padding="@dimen/md_keylines">

    <ImageView
        android:id="@+id/list_avatar"
        android:layout_width="@dimen/logo_size_w"
        android:layout_height="@dimen/avator_size"
        android:contentDescription="@string/logoapp"
        android:scaleType="centerInside"
        android:src="@drawable/h2o_4" />

    <TextView
        android:id="@+id/list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/md_keylines"
        android:layout_marginStart="@dimen/md_keylines"
        android:layout_toEndOf="@+id/list_avatar"
        android:layout_toRightOf="@+id/list_avatar"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:textSize="@dimen/list_title"
        tools:text="@string/item_title" />

    <TextView
        android:id="@+id/list_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_title"
        android:layout_marginLeft="@dimen/md_keylines"
        android:layout_toRightOf="@+id/list_avatar"
        android:textColor="@color/medium_grey"
        android:ellipsize="end"
        android:singleLine="true"
        tools:text="@string/item_desc"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:textSize="@dimen/list_body"
        android:layout_marginStart="@dimen/md_keylines"
        android:layout_toEndOf="@+id/list_avatar" />
</RelativeLayout-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="125dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:background="#ffffff"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/list_avatar"
        android:layout_width="@dimen/logo_size_w"
        android:layout_height="@dimen/avator_size"
        android:contentDescription="@string/logoapp"
        android:scaleType="centerInside"
        android:src="@drawable/h2o_4" />

    <TextView
        android:id="@+id/list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="-48dp"
        android:baselineAligned="false"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:textSize="@dimen/list_title"
        tools:text="@string/item_title"
        android:layout_marginStart="85dp" />

    <TableRow
        android:id="@+id/hr"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="85dp"
        android:background="@color/place_autocomplete_search_hint"
        android:layout_marginStart="85dp"></TableRow>

    <TextView
        android:id="@+id/lblFrete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="12dp"
        android:text="@string/entrega"
        android:textColor="@color/place_autocomplete_search_hint"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginStart="85dp" />

    <TextView
        android:id="@+id/list_desc"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:textSize="@dimen/list_body"
        tools:text="@string/item_desc"
        android:layout_marginStart="85dp" />

    <TextView
        android:id="@+id/lblNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="185dp"
        android:layout_marginStart="185dp"
        android:layout_marginTop="-45dp"
        android:text="@string/nota"
        android:textColor="@color/place_autocomplete_search_hint"
        android:textSize="14sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txt_nota"
        android:layout_width="29dp"
        android:layout_height="18dp"
        android:layout_marginLeft="185dp"
        android:layout_marginStart="185dp"
        android:textColor="@color/button_grey"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/imgNota"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginLeft="262dp"
        android:layout_marginStart="208dp"
        android:layout_marginTop="-17dp"
        android:contentDescription="@string/img_nota"
        android:paddingLeft="2dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/ic_star_16" />

    <TextView
        android:id="@+id/lblPagamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="255dp"
        android:layout_marginTop="-38dp"
        android:text="@string/pagamento"
        android:textColor="@color/place_autocomplete_search_hint"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginStart="255dp" />

    <ImageView
        android:id="@+id/imgPgtoCart"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginLeft="263dp"
        android:layout_marginStart="263dp"
        android:contentDescription="@string/img_pgto_cart"
        android:visibility="invisible"
        app:srcCompat="@drawable/ic_bank_card_24" />

    <ImageView
        android:id="@+id/imgPgtoMoney"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginLeft="296dp"
        android:layout_marginStart="296dp"
        android:layout_marginTop="-25dp"
        android:contentDescription="@string/img_pgto_money"
        android:visibility="invisible"
        app:srcCompat="@drawable/ic_stack_money_24" />


</LinearLayout>
