<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/div_product_list"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:background="#ffffff"
    android:clickable="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/list_avatar"
        android:layout_width="@dimen/logo_size_w"
        android:layout_height="@dimen/avator_size"
        android:contentDescription="@string/logoapp"
        android:scaleType="centerInside"
        android:src="@drawable/logo_nativa" />

    <TextView
        android:id="@+id/list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="-59dp"
        android:singleLine="false"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:textSize="@dimen/cast_tracks_chooser_dialog_row_text_size"
        tools:text="@string/item_title" />

    <TableRow
        android:id="@+id/hr"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="85dp"
        android:layout_marginStart="85dp"
        android:background="@color/place_autocomplete_search_hint"></TableRow>

    <!--TextView
        android:id="@+id/lblValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="8dp"
        android:text="@string/valor"
        android:textColor="@color/place_autocomplete_search_hint"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/list_desc"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:layout_marginStart="85dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:textSize="@dimen/cast_tracks_chooser_dialog_no_message_text_size"
        tools:text="@string/item_desc" /-->
    <LinearLayout
        android:id="@+id/div_valor"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:layout_marginLeft="85dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor"
            android:textColor="@color/place_autocomplete_search_hint"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/list_desc"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:textSize="16sp"
            tools:text="R$15.759,95" />
    </LinearLayout>

    <!--TextView
        android:id="@+id/lblLiters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="175dp"
        android:layout_marginStart="175dp"
        android:layout_marginTop="-42dp"
        android:text="@string/litros"
        android:textColor="@color/place_autocomplete_search_hint"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_liters"
        android:layout_width="24dp"
        android:layout_height="18dp"
        android:layout_marginLeft="184dp"
        android:layout_marginStart="184dp"
        android:text="20"
        android:textColor="@color/button_grey"
        android:textSize="16sp"
        android:textStyle="bold" /-->
    <LinearLayout
        android:id="@+id/div_litros"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginLeft="175dp"
        android:layout_marginStart="175dp"
        android:layout_marginTop="-50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblLiters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/litros"
            android:textColor="@color/place_autocomplete_search_hint"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_liters"
            android:layout_width="24dp"
            android:layout_height="18dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="20"
            android:textColor="@color/button_grey"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


    <!--TextView
        android:id="@+id/lblNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="240dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="-37dp"
        android:text="@string/nota"
        android:textColor="@color/place_autocomplete_search_hint"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_nota"
        android:layout_width="24dp"
        android:layout_height="18dp"
        android:layout_marginLeft="240dp"
        android:layout_marginStart="240dp"
        android:text="4,5"
        android:textColor="@color/button_grey"
        android:textSize="14sp"
        android:textStyle="bold" /-->
    <LinearLayout
        android:id="@+id/div_notas"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginLeft="230dp"
        android:layout_marginStart="230dp"
        android:layout_marginTop="-50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblNota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nota"
            android:textColor="@color/place_autocomplete_search_hint"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_nota"
            android:layout_width="24dp"
            android:layout_height="18dp"
            android:text="4,5"
            android:textColor="@color/button_grey"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgNota"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginLeft="22dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="-15dp"
            android:contentDescription="@string/img_rating_product"
            app:srcCompat="@drawable/ic_star_16" />
    </LinearLayout>


    <!--ImageButton
        android:id="@+id/btnAddCart"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginLeft="285dp"
        android:layout_marginStart="285dp"
        android:layout_marginTop="-38dp"
        android:background="#ffffff"
        android:contentDescription="@string/img_add_cart"
        app:srcCompat="@drawable/ic_add_cart_36" /-->

    <LinearLayout
        android:id="@+id/div_cart"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="285dp"
        android:layout_marginStart="285dp"
        android:layout_marginTop="-51dp"
        android:clickable="true"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btnAddCart"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="#ffffff"
            android:contentDescription="@string/img_add_cart"
            app:srcCompat="@drawable/ic_add_cart_48" />
    </LinearLayout>


</LinearLayout>