<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_adress"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:label="@string/ac_my_adress"
    android:theme="@style/AppTheme"
    tools:context="com.gs.h2oapp.Action.AdressListActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content_adress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E6E6FA">

        <LinearLayout
            android:id="@+id/div_header_adress"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="vertical">

            <include
                layout="@layout/my_bar"
                android:layout_width="match_parent"
                android:layout_height="44dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/div_msg_header_adress"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="44dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/msg_escolha_adress"
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="#ffffff"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/msg_escolha_end"
                android:textAppearance="?android:attr/textAppearanceListItem"
                android:textColor="@color/button_grey"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/div_list_adress"
            android:layout_width="match_parent"
            android:layout_height="424dp"
            android:layout_marginTop="78dp"
            android:orientation="vertical">
            <!--include
                layout="@layout/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" /-->
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_adress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_add_adress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_plus_white_24" />

        <include
            layout="@layout/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view_adress"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:label="@string/ac_company_name"
        app:headerLayout="@layout/navheader"
        app:menu="@menu/menu_nav_adress">


    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>